...
  Locale? get _locale =>
      _overrides.lang == null ? null : Locale(_overrides.lang!);

  @override
  Widget build(BuildContext context) {
    return MaterialApp(
      key: const ValueKey('app.root'),
      onGenerateTitle: (context) => AppLocalizations.of(context).appTitle,
      debugShowCheckedModeBanner: false,
      localizationsDelegates: const [
        ...AppLocalizations.localizationsDelegates,
        FlutterQuillLocalizations.delegate,
      ],
...
